@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.filmweb.pl"
         name="Filmweb"
-        version="2.3.5"
+        version="2.3.6"
         provider-name="Regss">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
-        <import addon="metadata.common.themoviedb.org" version="2.8.0"/>
+        <import addon="metadata.common.themoviedb.org" version="3.1.1"/>
         <import addon="plugin.video.youtube" version="2.9.1" optional="true"/>
     </requires>
     <extension point="xbmc.metadata.scraper.movies"
