@@ -8,7 +8,7 @@
     $$15 - Rok
     $$11 - URL do filmu
 !-->
-<scraper framework="1.1" date="2017-01-10">
+<scraper framework="1.1" date="2018-02-03">
     
     <!-- Sprawdza plik NFO !-->
     <NfoUrl dest="3">
@@ -22,7 +22,11 @@
     
     <!-- Tworzy adres URL wyszukiwania !-->
     <CreateSearchUrl dest="3">
-        <RegExp input="$$1" output="&lt;url&gt;http://www.filmweb.pl/search/film?q=\1&amp;startYear=$$2&amp;endYear=$$2&lt;/url&gt;" dest="3">
+        <RegExp conditional="!SearchAlt" input="$$1" output="&lt;url&gt;http://www.filmweb.pl/films/search?q=\1&amp;startYear=$$2&amp;endYear=$$2&lt;/url&gt;" dest="3">
+            <expression />
+        </RegExp>
+		<!-- Alternatywna wyszukiwarka !-->
+		<RegExp conditional="SearchAlt" input="$$1" output="&lt;url&gt;http://www.filmweb.pl/search/live?q=%22\1%22%20$$2&lt;/url&gt;" dest="3">
             <expression />
         </RegExp>
     </CreateSearchUrl>
@@ -30,9 +34,13 @@
     <!-- Tworzy adresy URL dla znalezionych pozycji !-->
     <GetSearchResults dest="8">
         <RegExp input="$$5" output="&lt;results sorted=&quot;yes&quot;&gt;\1&lt;/results&gt;" dest="8">
-            <RegExp input="$$1" output="&lt;entity&gt;&lt;title&gt;\2 / \4&lt;/title&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url cache=&quot;filmweb-\1&quot;&gt;http://www.filmweb.pl/Film?id=\1&lt;/url&gt;&lt;/entity&gt;" dest="5">
-                <expression repeat="yes" fixchars="2,4" trim="2,4">li id=&quot;?film_([0-9]+)[^_]+&lt;h3&gt;([^_]+)&lt;/a&gt;[^_]+\(([0-9]+)\).*?title=&quot;?([^&quot;]+)&quot;.*?\1</expression>
-            </RegExp>
+			<RegExp conditional="!SearchAlt" input="$$1" output="&lt;entity&gt;&lt;title&gt;\2\6\8\6\7&lt;/title&gt;&lt;year&gt;\3&lt;/year&gt;&lt;url&gt;http://www.filmweb.pl\1&lt;/url&gt;&lt;/entity&gt;" dest="5">
+				<expression noclean="6" repeat="yes" fixchars="2,7" trim="2,7">filmPreview__link&quot; href=&quot;([^&quot;]+)&quot;[^-]+filmPreview__title&quot;&gt;([^&lt;]+)&lt;[^-]+filmPreview__year&quot;&gt;([0-9]+)&lt;(([^-]+div(.)class=&quot;filmPreview__originalTitle&quot;&gt;([^&lt;]+)&lt;(/))?)</expression>
+			</RegExp>
+			<!-- Alternatywna wyszukiwarka !-->
+			<RegExp conditional="SearchAlt" input="$$1" output="&lt;entity&gt;&lt;title&gt;\3 / \2&lt;/title&gt;&lt;year&gt;\4&lt;/year&gt;&lt;url&gt;http://www.filmweb.pl/Film?id=\1&lt;/url&gt;&lt;/entity&gt;" dest="5">
+				<expression repeat="yes" fixchars="2,3" trim="2,3">f\\c([0-9]+)\\[^\\]+\\c([^\\]+)\\c([^\\]+)\\c[^\\]+\\c([0-9]+)\\c</expression>
+			</RegExp>
             <expression noclean="1" />
         </RegExp>
     </GetSearchResults>
@@ -50,7 +58,7 @@
                     <expression>sasKeywordAdd\(&quot;filmId&quot;,([1-9][0-9]*)\)</expression>
                 </RegExp>
                 <RegExp input="$$1" output="\1" dest="20">
-                    <expression>filmId:&quot;?([1-9][0-9]*)</expression>
+                    <expression>filmId:\s?&quot;?([1-9][0-9]*)</expression>
                 </RegExp>
                 <expression />
             </RegExp>
@@ -153,7 +161,7 @@
             <!-- TRAILER -->
             <RegExp conditional="GetTrailer" input="$$6" output="\1" dest="5+">
                 <!-- TMDB TRAILER !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB TRAILER !-->
@@ -198,7 +206,7 @@
             <!-- GENRES !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB GENRES !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBGenresByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBGenresByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <expression noclean="1">(.+)</expression>
@@ -214,7 +222,7 @@
             <!-- TAGLINE !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB TAGLINE !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB TAGLINE !-->
@@ -275,7 +283,7 @@
             <!-- COUNTRY !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB COUNTRY !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCountryByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCountryByIdChain&quot;&gt;\1::p&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB COUNTRY !-->
@@ -291,7 +299,7 @@
             <!-- STUDIO !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB STUDIO !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBStudioByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBStudioByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB STUDIO !-->
@@ -350,7 +358,7 @@
             <!-- THUMB !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB THUMB !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBThumbsByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBThumbsByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB THUMB !-->
@@ -369,7 +377,7 @@
             <!-- FANART !-->
             <RegExp input="$$6" output="\1" dest="5+">
                 <!-- TMDB FANART !-->
-                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="6">
+                <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBFanartByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="6">
                     <expression clear="yes">(.+)</expression>
                 </RegExp>
                 <!-- FILMWEB FANART !-->
@@ -380,12 +388,12 @@
             </RegExp>
             
             <!-- SETS !-->
-            <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBSetByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="5+">
+            <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBSetByIdChain&quot;&gt;\1::pl&lt;/chain&gt;" dest="5+">
                 <expression>(.+)</expression>
             </RegExp>
             
             <!-- MPAA !-->
-            <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCertificationsByIdChain&quot;&gt;\1&lt;/chain&gt;" dest="5+">
+            <RegExp input="$$18" output="&lt;chain function=&quot;GetTMDBCertificationsByIdChain&quot;&gt;\1::$INFO[tmdbcertcountry]::$INFO[certprefix]&lt;/chain&gt;" dest="5+">
                 <expression>(.+)</expression>
             </RegExp>
             
@@ -476,7 +484,7 @@
                 <expression noclean="1" clear="yes">(.+)</expression>
             </RegExp>
             <!-- TMDB TRAILER !-->
-            <RegExp input="$$4" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$18&lt;/chain&gt;" dest="6">
+            <RegExp input="$$4" output="&lt;chain function=&quot;GetTMDBTrailerByIdChain&quot;&gt;$$18::pl&lt;/chain&gt;" dest="6">
                 <expression>^$</expression>
             </RegExp>
             <expression noclean="1" />
