@@ -7,4 +7,5 @@
     <string id="30004">Use Original Title</string>
     <string id="30005">Also get TMDb thumbs</string>
     <string id="30011">Search all NFO's</string>
+	<string id="30012">Alternative search engine</string>
 </strings>
