@@ -7,4 +7,5 @@
     <string id="30004">Używaj oryginalnego tytułu</string>
     <string id="30005">Pobieraj również okładki z TMDb</string>
     <string id="30011">Przeszukaj wszystkie pliki NFO</string>
+	<string id="30012">Alternatywna wyszukiwarka</string>
 </strings>
